# cortex-ocean

./: CMakeLists.txt  README
ops/CortexOcean/ocean/: ocean-1.py
src/: CortexOceanBinding.cpp  CortexOceanBinding.h  Ocean.h  OceanOp.cpp  OceanOp.h
test/procedurals/oceanProcedural/: oceanProcedural-1.py
